--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -41,13 +41,14 @@ input[type="tel"] {
 }
 
 input[type="submit"] {
-    width: 100%;
-    padding: 0.75em;
-    background-color: #007BFF;
-    color: white;
+    background-color: #04AA6D; /* Green */
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 input[type="submit"]:hover {
